# slimjelly

./: AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix
src/: config.rs  error.rs  main.rs  secure_store.rs
src/app/: actions.rs  mod.rs  playback.rs  ui.rs
src/jellyfin/: client.rs  mod.rs  models.rs
src/seerr/: client.rs  mod.rs  models.rs
src/subtitles/: client.rs  mod.rs  models.rs
