[package]
name = "slimjelly"
version = "0.2.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
directories = "6"
eframe = { version = "0.31", default-features = true }
egui = "0.31"
env_logger = "0.11"
getrandom = "0.3"
hostname = "0.4"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
winit = "0.30"
